namespace DummyProject.Bll;

public interface IDummyService
{
    string Name { get; }
}